add "auto select" preferred branch button

--- a/popup/index.html
+++ b/popup/index.html
@@ -6,7 +6,16 @@
 	</head>
 
 	<body>
-		<div class="column">
+		<div class="column container">
+			<div class="column preferences hidden">
+				<div class="column">
+					<h2>Tercihler</h2>
+					<div>
+						<h3>Branş</h3>
+						<p id="preferred-branch"></p>
+					</div>
+				</div>
+			</div>
 			<button type="button">Ayarlar</button>
 		</div>
 		<script src="index.js"></script>
