add "auto select" preferred facility button

--- a/popup/index.html
+++ b/popup/index.html
@@ -14,6 +14,10 @@
 						<h3>Branş</h3>
 						<p id="preferred-branch"></p>
 					</div>
+					<div>
+						<h3>Tesis</h3>
+						<p id="preferred-facility"></p>
+					</div>
 				</div>
 			</div>
 			<button type="button">Ayarlar</button>
