add "auto select" preferred field button

--- a/options/index.html
+++ b/options/index.html
@@ -42,7 +42,17 @@
 			</select>
 		</div>
 
-		<span id="selected-branch"></span>
+		<div>
+			<label for="field">Varsayılan Salon</label>
+			<select id="field">
+				<option value="f2cadde6-efe1-4a44-99d2-c26222a16231">AÇIK TENİS KORTU</option>
+				<option value="d503ef3d-dc63-44dc-8c45-1f2e5ba312e7">KAPALI TENİS KORTU 1</option>
+				<option selected value="39ab31e0-78ec-41ab-b866-c4040b357bd4">KAPALI TENİS KORTU 2</option>
+			</select>
+		</div>
+
+		<button id="reset" type="button">Tercihleri Sıfırla</button>
+
 		<script src="options.js"></script>
 	</body>
 </html>
