--- a/popup/index.html
+++ b/popup/index.html
@@ -18,6 +18,10 @@
 						<h3>Tesis</h3>
 						<p id="preferred-facility"></p>
 					</div>
+					<div>
+						<h3>Salon</h3>
+						<p id="preferred-field"></p>
+					</div>
 				</div>
 			</div>
 			<button type="button">Ayarlar</button>
