add countdown until next reservation slot is available

--- a/popup/index.html
+++ b/popup/index.html
@@ -7,6 +7,10 @@
 
 	<body>
 		<div class="column container">
+			<div class="column">
+				<h2>Bir Sonraki Rezervasyona Kalan Süre</h2>
+				<p id="countdown"></p>
+			</div>
 			<div class="column preferences hidden">
 				<div class="column">
 					<h2>Tercihler</h2>
