update options button ID of pop-up view

--- a/popup/index.html
+++ b/popup/index.html
@@ -28,7 +28,7 @@
 					</div>
 				</div>
 			</div>
-			<button type="button">Ayarlar</button>
+			<button id="options" type="button">Ayarlar</button>
 		</div>
 		<script src="index.js"></script>
 	</body>
