add background script to deliver tab status to pop-up

--- a/popup/index.html
+++ b/popup/index.html
@@ -6,14 +6,15 @@
 	</head>
 
 	<body>
+		<h1>SPOR INSTANTBUL</h1>
 		<div class="column container">
 			<div class="column">
 				<h2>Bir Sonraki Rezervasyona Kalan Süre</h2>
 				<p id="countdown"></p>
 			</div>
-			<div class="column preferences hidden">
+			<div class="column automation hidden">
 				<div class="column">
-					<h2>Tercihler</h2>
+					<h2>Otomasyon</h2>
 					<div>
 						<h3>Branş</h3>
 						<p id="preferred-branch"></p>
