add "auto select" all preferences button

--- a/popup/index.html
+++ b/popup/index.html
@@ -16,6 +16,10 @@
 				<div class="column">
 					<h2>Otomasyon</h2>
 					<div>
+						<h3>Tercihleri Sırasıyla Otomatik Seç</h3>
+						<button id="automate" type="button">Otomasyon Başlat</button>
+					</div>
+					<div>
 						<h3>Branş</h3>
 						<p id="preferred-branch"></p>
 					</div>
