--- a/popup/index.html
+++ b/popup/index.html
@@ -28,7 +28,8 @@
 					<h4>Otomasyon</h4>
 					<div class="row automation">
 						<span class="form-hint"
-							>Aşağıdaki tercihlerinizi göz önünde bulundurarak, mevcut en son rezervasyonu sepetinize ekler.</span
+							>Aşağıdaki tercihlerinizi göz önünde bulundurarak, mevcut <strong>en son</strong> rezervasyonu sepetinize
+							ekler.</span
 						>
 						<button id="automate" type="button">
 							<svg width="20px" height="20px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
