--- a/options/index.html
+++ b/options/index.html
@@ -2,56 +2,56 @@
 <html>
 	<head>
 		<meta charset="utf-8" />
-		<link rel="stylesheet" href="index.css" />
+		<link rel="stylesheet" href="../CORE.css" />
+		<link rel="stylesheet" href="options.css" />
 	</head>
 
 	<body>
-		<h1>Ayarlar</h1>
+		<h4>Tercihler</h4>
+		<main class="column">
+			<div class="column">
+				<label for="branch">Varsayılan Branş</label>
+				<select id="branch">
+					<option selected value="59b7bd71-1aab-4751-8248-7af4a7790f8c">Tenis</option>
+					<option disabled value="5bdbe5f0-a06e-4243-b65d-231b3c2247ed">Futbol</option>
+					<option disabled value="b735aa4b-5923-4789-a04e-bf3e0b0a467c">Basketbol / Voleybol</option>
+					<option disabled value="46f3a438-9535-4fea-b6a8-c8533041d7f9">Stad Kiralama</option>
+					<option disabled value="43765821-070d-4b2c-80d3-0193729d165e">Tenis Çalışma Duvarı</option>
+					<option disabled value="52f5e05c-9bf5-485f-8033-f914bc9e6097">Masa Tenisi</option>
+				</select>
+			</div>
 
-		<h2>Tercihler</h2>
+			<div class="column">
+				<label for="facility">Varsayılan Tesis</label>
+				<select id="facility">
+					<option selected value="5d4ef42f-e103-431e-94cb-ad5aa5201850">AVCILAR SPOR KOMPLEKSİ</option>
+					<option disabled value="bdef460a-c8b1-49de-9c5e-666d622b9458">BOSTANCI SAHİL SPOR TESİSİ</option>
+					<option disabled value="7d37f660-0767-4d1b-a4bc-fbdeef19e310">CEMAL KAMACI SPOR KOMPLEKSİ</option>
+					<option disabled value="0848e94d-b6ec-4c02-932e-1adc9348859d">FLORYA SPOR TESİSİ</option>
+					<option disabled value="b26f5f58-52e8-4eff-b350-8a53a971d4bc">GÜZELCE SPOR TESİSİ</option>
+					<option disabled value="61fb82a5-54f0-4ebd-a24a-1747ec6b7086">KAYNARCA SPOR TESİSİ</option>
+					<option disabled value="6989b491-bb85-414a-b470-293b190ebb44">MALTEPE SAHİL SPOR TESİSİ</option>
+					<option disabled value="c2c33709-aa47-4246-8da3-214deda894ef">METİN OKTAY SPOR TESİSİ</option>
+					<option disabled value="3bda9473-6f1a-445e-834d-0383e9d7805a">PENDİK ÇAMLIK SPOR TESİSİ</option>
+					<option disabled value="c3f62e8b-c882-4f8d-9934-a59ed180218a">PENDİK SAHİL SPOR TESİSİ</option>
+					<option disabled value="a0921d79-d519-4f10-8663-11be1f9dfcf3">SİLİVRİ MÜJDAT GÜRSU SPOR TESİSİ</option>
+					<option disabled value="05efe521-f4bf-4523-9632-77f1c9482791">SULTANBEYLİ 100. YIL SPOR KOMPLEKSİ</option>
+					<option disabled value="04087b93-3d76-47e7-b40d-7a03a67d2520">SULTANBEYLİ GÖLET SPOR TESİSİ</option>
+					<option disabled value="59aed6f3-a9ab-4b26-b461-1bf1d3935fbb">TUZLA SAHİL SPOR TESİSİ</option>
+				</select>
+			</div>
 
-		<div class="column">
-			<label for="branch">Varsayılan Branş</label>
-			<select id="branch">
-				<option selected value="59b7bd71-1aab-4751-8248-7af4a7790f8c">Tenis</option>
-				<option disabled value="5bdbe5f0-a06e-4243-b65d-231b3c2247ed">Futbol</option>
-				<option disabled value="b735aa4b-5923-4789-a04e-bf3e0b0a467c">Basketbol / Voleybol</option>
-				<option disabled value="46f3a438-9535-4fea-b6a8-c8533041d7f9">Stad Kiralama</option>
-				<option disabled value="43765821-070d-4b2c-80d3-0193729d165e">Tenis Çalışma Duvarı</option>
-				<option disabled value="52f5e05c-9bf5-485f-8033-f914bc9e6097">Masa Tenisi</option>
-			</select>
-		</div>
+			<div class="column">
+				<label for="field">Varsayılan Salon</label>
+				<select id="field">
+					<option value="f2cadde6-efe1-4a44-99d2-c26222a16231">AÇIK TENİS KORTU</option>
+					<option value="d503ef3d-dc63-44dc-8c45-1f2e5ba312e7">KAPALI TENİS KORTU 1</option>
+					<option selected value="39ab31e0-78ec-41ab-b866-c4040b357bd4">KAPALI TENİS KORTU 2</option>
+				</select>
+			</div>
 
-		<div>
-			<label for="facility">Varsayılan Tesis</label>
-			<select id="facility">
-				<option selected value="5d4ef42f-e103-431e-94cb-ad5aa5201850">AVCILAR SPOR KOMPLEKSİ</option>
-				<option disabled value="bdef460a-c8b1-49de-9c5e-666d622b9458">BOSTANCI SAHİL SPOR TESİSİ</option>
-				<option disabled value="7d37f660-0767-4d1b-a4bc-fbdeef19e310">CEMAL KAMACI SPOR KOMPLEKSİ</option>
-				<option disabled value="0848e94d-b6ec-4c02-932e-1adc9348859d">FLORYA SPOR TESİSİ</option>
-				<option disabled value="b26f5f58-52e8-4eff-b350-8a53a971d4bc">GÜZELCE SPOR TESİSİ</option>
-				<option disabled value="61fb82a5-54f0-4ebd-a24a-1747ec6b7086">KAYNARCA SPOR TESİSİ</option>
-				<option disabled value="6989b491-bb85-414a-b470-293b190ebb44">MALTEPE SAHİL SPOR TESİSİ</option>
-				<option disabled value="c2c33709-aa47-4246-8da3-214deda894ef">METİN OKTAY SPOR TESİSİ</option>
-				<option disabled value="3bda9473-6f1a-445e-834d-0383e9d7805a">PENDİK ÇAMLIK SPOR TESİSİ</option>
-				<option disabled value="c3f62e8b-c882-4f8d-9934-a59ed180218a">PENDİK SAHİL SPOR TESİSİ</option>
-				<option disabled value="a0921d79-d519-4f10-8663-11be1f9dfcf3">SİLİVRİ MÜJDAT GÜRSU SPOR TESİSİ</option>
-				<option disabled value="05efe521-f4bf-4523-9632-77f1c9482791">SULTANBEYLİ 100. YIL SPOR KOMPLEKSİ</option>
-				<option disabled value="04087b93-3d76-47e7-b40d-7a03a67d2520">SULTANBEYLİ GÖLET SPOR TESİSİ</option>
-				<option disabled value="59aed6f3-a9ab-4b26-b461-1bf1d3935fbb">TUZLA SAHİL SPOR TESİSİ</option>
-			</select>
-		</div>
-
-		<div>
-			<label for="field">Varsayılan Salon</label>
-			<select id="field">
-				<option value="f2cadde6-efe1-4a44-99d2-c26222a16231">AÇIK TENİS KORTU</option>
-				<option value="d503ef3d-dc63-44dc-8c45-1f2e5ba312e7">KAPALI TENİS KORTU 1</option>
-				<option selected value="39ab31e0-78ec-41ab-b866-c4040b357bd4">KAPALI TENİS KORTU 2</option>
-			</select>
-		</div>
-
-		<button id="reset" type="button">Tercihleri Sıfırla</button>
+			<button id="reset" type="button">Tercihleri Sıfırla</button>
+		</main>
 
 		<script src="options.js"></script>
 	</body>
