--- a/options/index.html
+++ b/options/index.html
@@ -50,7 +50,7 @@
 				</select>
 			</div>
 
-			<button id="reset" type="button">Tercihleri Sıfırla</button>
+			<button id="reset" type="button" class="danger">Tercihleri Sıfırla</button>
 		</main>
 
 		<script src="options.js"></script>
